owlcms/src/main/webapp/VAADIN/themes/competition/styles.css
/* ... */
/* announcer's table -- highlights for lift/no-lift/total/current lifter */
.v-table-cell-content-success,.v-selected .v-table-cell-content-success
	{
	background: none;
	background-color: #A5FF7F; /* desaturated lime */
	color: black;
	font-style: normal;
	text-shadow: none;
}

.v-table-cell-content-success,.v-selected .v-table-cell-content-success
	{
	background: none;
	background-color: #A5FF7F; /* desaturated lime */
	color: black;
	font-style: normal;
	text-shadow: none;
}

.v-table-cell-content-fail,.v-selected .v-table-cell-content-fail {
	background: none;
	background-color: #FF7B7C; /* desaturated red */
	color: black;
	font-style: normal;
	text-shadow: none;
}

.v-table-cell-content-total,.v-selected .v-table-cell-content-total {
	background: none;
	background-color: #D67FFF;
	color: black;
	font-style: normal;
	text-shadow: none;
}

.v-table-cell-content-current,.v-selected .v-table-cell-content-current
	{
	background: none;
	background-color: #7FFFFF;
	color: black;
	font-style: normal;
	text-shadow: none;
}

.v-label-wrong {
	color: red;
	font-weight: bolder;
}

.currentLifterSummary .v-label {
	font-weight: bold;
	font-size: x-large;
	line-height: 1.2em
}

.currentLifterSummary .v-label .break {
	height: 1ex
}

.currentLifterSmallSummary .v-label {
	line-height: 1.2em
}

.currentLifterSmallSummary .v-label .break {
	height: 1ex
}

.projectorTop {
	font-weight: bold;
	font-size: 24px;
	vertical-align: baseline;
	background-color: black;
	color: white;
	padding: 0.6ex;
	width: 100%;
}

.projectorTop td {
	text-align: left;
	vertical-align: baseline;
}

.projectorTop td.name .v-label {
	text-align: left;
	line-height: 110%;
	vertical-align: baseline;
}

.projectorTop td.weight {
	color: aqua;
	text-align: right;
}

.projectorTop td.attempt {
	text-align: right;
}

.projectorTop td.timeDisplay {
	color: yellow;
	text-align: center;
}

.v-gridlayout input.v-textfield {
	-webkit-border-image: none;
	border: thin solid;
	border-color: silver;
	-webkit-border-radius: 4px;
	border-style: solid;
	margin-bottom: 2px;
	padding-right: 2px;
}

.v-gridlayout input.v-readonly {
	-webkit-border-image: none;
	border: thin solid;
	border-color: silver;
	-webkit-border-radius: 4px;
	border-style: solid;
	margin-bottom: 2px;
	background-color: rgb(240, 240, 240);
	color: gray;
	margin-right: 3px;
	padding-right: 2px;
}

.v-gridlayout input.v-datefield-textfield.v-readonly {
	-webkit-border-image: none;
	-moz-border-image: none;
	border: thin solid;
	border-color: silver;
	-webkit-border-radius: 4px;
	border-style: none;
	margin-bottom: 2px;
	background-color: transparent;
	color: gray;
}

.v-sa .v-gridlayout input.v-datefield-textfield.v-readonly {
	-webkit-border-image: none;
	-moz-border-image: none;
	border: thin solid;
	border-color: silver;
	-webkit-border-radius: 4px;
	border-style: none;
	margin-bottom: 2px;
	background-color: transparent;
	color: grey;
	width: 8.5ex !important; /* kludge, comes out too wide otherwise. */
}

.v-textfield-hfocus {
	background-color: #FFFD87 !important; /* desaturated yellow */
	outline: none;
	background-image: none !important;
}

.v-textfield-current {
	background-color: #7FFFFF !important; /* desaturated aqua */
	outline: none;
	background-image: none !important;
}

.v-readonly.v-textfield-current {
	background-color: #7FFFFF !important; /* desaturated aqua */
	outline: none;
	background-image: none !important;
}

.v-textfield-success {
	background-color: #A5FF7F !important; /* desaturated lime */
	outline: none;
	background-image: none !important;
}

.v-textfield-fail {
	background-color: #FF7B7C !important; /* desaturated red */
	outline: none;
	background-image: none !important;
}

//
buttons
button.v-button-okLift {
	color: blue;
}

button.v-button-failedLift span {
	color: red;
}

.v-progressindicator-wrapper {
	display: none;
}

.v-Notification-system {
	background: #3b3c3e;
	font-size: small;
}

.v-sa .v-menubar {
	text-shadow: none;
}

.attemptBoardView .v-caption-loadChart .v-captiontext {
	display: none;
}


body.v-generated-body.v-sa.v-ch.v-webkit {
	background: black;
	border-style: none;
	border-color: black;
	border: 0px solid black;
}
body.v-generated-body.v-ff {
	background: black;
	border-style: none;
	border-color: black;
	border: 0px solid black;
}

.black .v-app {
	background: black;
}
.black .v-sa .v-panel-content, .black .v-ff3 .v-panel-content, .black .v-ff .v-panel-content {
	border-style: none;
	border-color: black;
	border: 0px solid black;
}
.black .v-panel-content > div {
	background: black;
	border-color: black;
	border: 0px solid black;
}
.black .v-panel-content {
	background: black;
	border-color: black;
	border: 0px solid black;
	outline: none;
	outline-color: black;
	outline-style: hidden;
	outline-width: 0px;
}

.black .v-panel-deco {
	display: none;
	height: 0px;
	overflow: hidden;
	border-color: black;
	background: black;
	border-top: 0px solid black;
	border: 0px solid black;
}
.black div.v-panel-deco {
	display: none;
	height: 0px;
	overflow: hidden;
	border-color: black;
	background: black;
	border-top: 0px solid black;
	border: 0px solid black;
}
.black .v-sa .v-panel-deco {
	display: none;
	height: 0px;
	overflow: hidden;
	border-color: black;
	background: black;
	border-top: 0px solid black;
	border: 0px solid black;;
}

/* Readonly */
input.v-textfield-readonly,
.black input.v-textfield-readonly,
textarea.v-textarea-readonly,
.black textarea.v-textarea-readonly {
	border: none;
	background: transparent;
}

.white input.v-textfield-readonly,
.white textarea.v-textarea-readonly {
	border: none;
	background: transparent;
}

.white .lifterGrid input.v-textfield-readonly,
.white .lifterGrid textarea.v-textarea-readonly {
	-webkit-border-image: none;
	border: thin solid;
	border-color: silver;
	-webkit-border-radius: 4px;
	border-style: solid;
	margin-bottom: 2px;
	background-color: rgb(240, 240, 240);
	color: gray;
	margin-right: 3px;
	padding-right: 2px;
}
/* ... */

